stylesheet.less
/* ===============================
   IMPORT CSS
   =============================== */

@import "@{templateCommon}/basekit-bootstrap.less";

/* 

Table of Contents -

  1. Default
  2. Default page
  3. Custom CSS
  4. Menu sections navigation
  5. Header
  6. Menu
  7. Footer
  8. SOCIAL BAR WIDGET / PROFILE DATA
  9. IPHONE WIDTH
  10. Print overrides.
*/

/* ===============================
   1. Default
   =============================== */

.featureimage {
  width: 100%;
  height:100%;
}
   
.contain {
    position: relative;
}

body {
    font-family:@font-swatch5-font-family;
    margin: 0;
    padding: 0;
    background-color:@color-swatch1;
}

.wrapper {
    width: 80%;
    margin: 0 10%;
}

a {
    font-family:@font-swatch5-font-family;
    font-size:@font-swatch5-font-size;
    font-weight: @font-swatch5-font-weight;
    line-height:@font-swatch5-line-height;
    color:@color-swatch3;
    letter-spacing: @font-swatch5-letter-spacing;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

h1, h2, h3, h4, h5, p {
    margin: 0;
    padding: 0 0 10px;
}

header.bk-header p {
    font-family:@font-swatch8-font-family;
    font-weight: @font-swatch8-font-weight;
    color:@font-swatch8-color;
    line-height:@font-swatch8-line-height;
    letter-spacing: @font-swatch8-letter-spacing;
    font-size: @font-swatch8-font-size;           
}

.widget.feature .feature-bgimg .content {
    display: block;
}

/* ===============================
   3. CUSTOM CSS
   =============================== */

.contacttextwidget {
    text-align:center;
}

.bk-content-text h2 {
    overflow:hidden;
}

.widget.menu .main .menu-items li .inner-item .menu-section-item-dietary-props .dietary-icon {
    padding:3px;
}

.main {
    padding:0;
}

.socialheader {
    float:none;
}

.widget.companyaddress p {
    font-family:@font-swatch5-font-family;
    font-weight: @font-swatch5-font-weight;
    color:@font-swatch5-color;
    line-height:@font-swatch5-line-height;
    letter-spacing: @font-swatch5-letter-spacing;
    font-size: @font-swatch5-font-size; 
}

.widget.profile span {
    font-family:@font-swatch5-font-family;
    font-weight: @font-swatch5-font-weight;
    color:@font-swatch5-color;
    line-height:@font-swatch5-line-height;
    letter-spacing: @font-swatch5-letter-spacing;
    font-size: @font-swatch5-font-size; 
}

hr.line {
    height:1px;
}

.logo, .companyname {
    margin:0px auto;
    display:table;
}

header.bk-header {
  padding: 0;
  width: 100%;
  position: absolute;
  top:0;
  background-color:transparent;
}

.header-container {
    padding:20px 0px;
}

.widget.extendednavigation .bk-overlay {
    position: absolute;
    right: 0px;
    left: auto!important;
    top: 0px;
    bottom: 0px;
    z-index: 8000;
    cursor: pointer;
    width: 60%;
    float: right;
    height: 60px;
}

.twitter ul li a {
    font-weight:400;
    font-size:@font-swatch4-font-size;

}

/* ===============================
   2. DEFAULT PAGE
   =============================== */

.bk-pt-default .featureimage {
    height:100%;
}

.bk-pt-default .bk-header {
    background-color:@color-swatch2;
    margin-bottom:20px;
}

.bk-pt-default .featurebtn-container {
    padding-bottom: 80px;
}

.bk-pt-default .widget.content {
    margin-top:20px;
}

.bk-pt-default .bk-header {
    position:relative;
}

.bk-pt-default .widget.menusections {
    margin-top:40px;
}

/* ===============================
   3. FEATURE
   =============================== */
/*
.widget {
    &.feature {
        .feature-bgimg {
            background-image: image('/images/feature-bg.jpg');
        }
    }
}
*/

.widget {
    &.feature {
        .feature-bgimg {
            height: 100%;
        }
        .feature-bgimg .content {
            padding: 12em 2em;
            @media @tablet {
                padding: 8em 1em;
            }
            @media @mobile {
                padding: 6em 1em;
            }
            h2 {
                padding-bottom: 0.1em;
                color: @font-swatch8-color;
                font-family: @font-swatch8-font-family;
                font-size: @font-swatch8-font-size; 
                letter-spacing: @font-swatch8-letter-spacing;
                line-height: @font-swatch8-line-height;
                word-wrap: break-word;
                @media @tablet {
                    font-size: bkscale(@font-swatch8-font-size, 0.7);
                    line-height: bkscale(@font-swatch8-line-height, 0.75);
                }
                span {
                    padding-bottom: 0;
                    margin: 0px auto;
                    display: table;
                    text-align:center;
                }
            }
            h3  { 
                color: @color-swatch7;
                display: block;
                font-family: @font-swatch9-font-family;
                font-size: @font-swatch9-font-size; 
                letter-spacing: bkscale(@font-swatch10-letter-spacing, 0.8);
                line-height: @font-swatch5-line-height;
                margin-top: 20px;
                text-align: center;
                @media @tablet {
                    font-size: bkscale(@font-swatch5-font-size, 1.2);
                    letter-spacing: bkscale(@font-swatch10-letter-spacing, 0.6);
                    line-height: bkscale(@font-swatch5-line-height, 1.1);
                    margin-top: 25px;
                }
            }
        }
    }
}
/* ... */

